# Cemu

./: .gitignore  BUILD.md  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml  build_check.yml
dependencies/vcpkg_overlay_ports_mac/curl/: cmake-project-include.cmake  portfile.cmake  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/Cafe/: CMakeLists.txt  CMakeLists.txt.bak  CafeSystem.cpp  CafeSystem.cpp.bak
src/Cafe/HW/Espresso/Recompiler/BackendAArch64/: BackendAArch64.cpp
src/Cafe/HW/Latte/Core/: LatteOverlay.cpp  LatteOverlay.h  LattePerformanceMonitor.cpp  LatteThread.cpp
src/Cafe/HW/Latte/LatteAddrLib/: LatteAddrLib_Coord.cpp
src/Cafe/HW/Latte/Renderer/: MetalView.h  MetalView.mm
src/Cafe/HW/Latte/Renderer/Metal/: LatteTextureMtl.cpp  LatteToMtl.cpp  MetalCommon.h  MetalLayer.h  MetalLayer.mm  MetalLayerHandle.cpp  MetalLayerHandle.h  MetalRenderer.cpp  MetalRenderer.h
src/Cafe/HW/Latte/Renderer/Vulkan/: VulkanRenderer.cpp
src/Cafe/HW/MMU/: MMU.h
src/Cafe/IOSU/kernel/: iosu_kernel.cpp
src/Cafe/IOSU/legacy/: iosu_acp.cpp  iosu_act.cpp.bak  iosu_fpd.cpp  iosu_nim.cpp
src/Cafe/IOSU/nn/boss/: boss_service.cpp.bak
src/Cafe/OS/RPL/: COSModule.cpp.bak
src/Cafe/OS/common/: OSCommon.cpp
src/Cafe/OS/libs/coreinit/: coreinit_MCP.cpp  coreinit_Misc.cpp  coreinit_Thread.cpp
src/Cafe/OS/libs/nlibcurl/: nlibcurl.cpp
src/Cafe/OS/libs/nn_idbe/: nn_idbe.cpp.bak
src/Cafe/OS/libs/nn_olv/: nn_olv_Common.h.bak
src/Cemu/: CMakeLists.txt  CMakeLists.txt.bak
src/Cemu/Logging/: CemuLogging.h
src/Cemu/Tools/DownloadManager/: DownloadManager.cpp.bak
src/Cemu/napi/: napi_act.cpp.bak  napi_ec.cpp.bak  napi_helper.cpp  napi_helper.h.bak  napi_idbe.cpp.bak  napi_version.cpp.bak
src/Common/: platform.h  precompiled.h
src/config/: ActiveSettings.cpp  CemuConfig.cpp  CemuConfig.h
src/gui/: CMakeLists.txt
src/gui/common/components/: gameList.cpp  gameList.h
src/gui/swiftui/: CMakeLists.txt  CemuApp.cpp  CemuApp.h  CemuIosApp.swift  ContentView.swift  MainWindow.cpp  MainWindow.h  RegionStrings.cpp  SwiftUICemuConfig.cpp  SwiftUICemuConfig.h  WindowSystemSwiftUI.mm
src/gui/swiftui/WindowSystemSwiftUI/: WindowSystemSwiftUIDelegates.mm  WindowSystemSwiftUIHelpers.mm  WindowSystemSwiftUIInternal.h  WindowSystemSwiftUIState.mm
src/gui/swiftui/canvas/: MetalCanvas.mm  RenderCanvas.h  VulkanCanvas.mm
src/gui/swiftui/common/: ContentView.swift  GameList.cpp  GameList.swift  SettingsView.cpp  SettingsView.h  SettingsView.swift
src/gui/swiftui/common/components/: GameList.cpp  SettingsView.cpp
src/gui/swiftui/common/settingsTabs/: AudioSettingsTab.swift  DebugSettingsTab.swift  GeneralSettingsTab.swift  GraphicsSettingsTab.swift  OverlaySettingsTab.swift
src/gui/swiftui/components/: GameList.cpp  GameList.h  GameList.swift  SettingsView.cpp  SettingsView.h  SettingsView.swift  SwiftUIGameList.cpp  SwiftUIGameList.h  SwiftUIGameList.swift
src/gui/swiftui/components/settingsTabs/: AccountSettingsTab.swift  AudioSettingsTab.swift  DebugSettingsTab.swift  GeneralSettingsTab.swift  GraphicsSettingsTab.swift  OverlaySettingsTab.swift
src/gui/swiftui/ios/: Cemu-iOS-Bridging-Header.h  CemuAppIOS.mm  CemuIosApp.swift  Info-iOS.plist.in  IosBackends.swift  LaunchBridge.cpp  LaunchScreen.storyboard  OnScreenGamepad.swift  WindowSystemIOS.cpp  WindowSystemIOS_GameLoad.mm
src/gui/swiftui/macos/: CemuApp.cpp  CemuApp.h  MainWindow.cpp  MainWindow.h  RegionStrings.cpp  RegionStrings.h  SwiftUICemuConfig.cpp  SwiftUICemuConfig.h  WindowSystemSwiftUI.mm
src/gui/swiftui/macos/WindowSystemSwiftUI/: WindowSystemSwiftUIDelegates.mm  WindowSystemSwiftUIHelpers.mm  WindowSystemSwiftUIState.mm
src/gui/swiftui/macos/canvas/: MetalCanvas.mm  RenderCanvas.h  VulkanCanvas.mm
src/gui/wxgui/: CMakeLists.txt  CemuApp.cpp  CemuUpdateWindow.cpp.bak  ChecksumTool.cpp.bak  DownloadGraphicPacksWindow.cpp.bak  GeneralSettings2.cpp  GeneralSettings2.h  PadViewFrame.cpp  wxWindowSystem.cpp
src/gui/wxgui/components/: wxGameList.cpp
src/input/: CMakeLists.txt  ControllerFactory.cpp  InputManager.cpp  InputManager.h
src/input/api/: InputAPI.h
src/input/api/iOS/: IOSTouchController.cpp  IOSTouchController.h  IOSTouchControllerProvider.cpp  IOSTouchControllerProvider.h  IOSTouchInput_Bridge.cpp  IOSTouchInput_Bridge.h
src/resource/: cemu.ios.entitlements
src/util/: CMakeLists.txt
src/util/Fiber/: FiberIOS.cpp
src/util/crypto/: aes128.h
src/util/helpers/: Semaphore.h  helpers.cpp
src/util/highresolutiontimer/: HighResolutionTimer.cpp
